<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
<TextView android:id="@+id/title_textview" 
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content"
    android:gravity="center"
    android:textSize="25sp"  
    android:text="@string/app_name"
    />
<TextView android:id="@+id/screenname_textview" 
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content"
    android:gravity="center"
    android:layout_marginBottom="10px"
    android:text="@string/logowanie"
    />
<TextView android:id="@+id/login_textview" 
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content"
    android:gravity="left"
    android:text="@string/login"
    />
<EditText android:id="@+id/login_edittext"
	android:layout_width="fill_parent" 
    android:layout_height="wrap_content"
    android:maxLines="1"
    android:layout_marginBottom="10px"
    android:inputType="text"/>
<TextView android:id="@+id/password_textview" 
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content"
    android:gravity="left"
    android:text="@string/haslo"
    />
<EditText android:id="@+id/password_edittext"
	android:layout_width="fill_parent" 
    android:layout_height="wrap_content"
    android:inputType="textPassword"
    android:layout_marginBottom="10px"/>
<TextView android:id="@+id/serwer_textview" 
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content"
    android:gravity="left"
    android:text="@string/serwer"
    />
<Spinner 
    android:id="@+id/server_spinner"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10px"
    android:prompt="@string/serwer"
    />
<LinearLayout
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="20px"
    >
    	<Button android:id="@+id/login_button"
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:layout_weight="1"
    		android:text="@string/zaloguj"
    	/>
    	<CheckBox android:id="@+id/remember_checkbox"
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:layout_weight="2"
    		android:layout_marginLeft="30px"
    		android:textSize="14sp" 
    		android:text="@string/zapamietaj"
    	/>
</LinearLayout>
<TextView android:id="@+id/register_textview" 
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content"
    android:gravity="left"
    android:layout_marginLeft="20px"
    android:layout_marginBottom="5px"
    android:text="@string/nie_masz_konta"/>
<Button android:id="@+id/register_button"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:text="@string/zarejestruj"
    	/>   
</LinearLayout>
</ScrollView>
